# yadro-comp-club

./: .clang-format  CMakeLists.txt  README.md  main.cpp
include/: executor.hpp  parser.hpp
include/utility/: data.hpp  exceptions.hpp  utility.hpp  validator.hpp
src/: executor.cpp  parser.cpp
src/utility/: data.cpp  exceptions.cpp  utility.cpp  validator.cpp
tests/: executor_test.cpp  my_time_test.cpp  parser_test.cpp  validator_test.cpp
tests/input/: 10.in  11.in  12.in  13.in  14.in  5.in  9.in
tests/output/: 10.out  12.out  13.out  2.out  3.out  4.out  5.out  9.out
